--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ nav {
   margin-bottom: 30px;
   color: var(--text-color-second);
 }
-.featured-text-btn {
+/* .featured-text-btn {
   display: flex;
   gap: 20px;
 }
@@ -203,18 +203,22 @@ nav {
 }
 .featured-text-btn > .blue-btn:hover {
   background: var(--first-color-hover);
-}
+} */
 .social_icons {
   display: flex;
-  margin-top: 5em;
+  margin-top: 1.3em;
   gap: 30px;
+}
+.social_icons .icon{
+  color: inherit;
+  text-decoration: none;
 }
 .icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
   cursor: pointer;
@@ -233,8 +237,8 @@ nav {
 }
 .image {
   margin: auto 0;
-  width: 380px;
-  height: 380px;
+  width: 400px;
+  height: 400px;
   border-radius: 55% 45% 55% 45%;
   overflow: hidden;
   animation: imgFloat 7s ease-in-out infinite;
@@ -319,12 +323,17 @@ h3 {
   box-shadow: 1px 8px 10px 2px var(--first-shadow-color);
   border-radius: 20px;
 }
-.about-info p {
-  text-align: center;
-  font-size: 15px;
-  color: #777;
+.about-info h3{
+  color: var(--text-color-third);
+  font-size: 30px;
 }
-.about-btn button {
+.about-info p {
+  margin-top: 1.5em;
+  text-align: center;
+  font-size: 16px;
+  color: #000;
+}
+/* .about-btn button {
   position: absolute;
   right: 20px;
   bottom: 20px;
@@ -334,14 +343,14 @@ h3 {
 }
 .about-btn button:hover {
   background: var(--first-color-hover);
-}
+} */
 
 /* ----- ABOUT / SKILLS BOX ----- */
 .skills-box {
   margin: 10px;
 }
 .skills-header {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 .skills-list {
   display: flex;
@@ -349,11 +358,46 @@ h3 {
   gap: 5px;
 }
 .skills-list span {
-  font-size: 14px;
-  background: var(--first-color);
-  color: var(--color-white);
-  padding: 2px 10px;
-  border-radius: 5px;
+  background-color: var(--color-white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 70px;
+  margin: 3px;
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 1px 8px 10px 2px var(--first-shadow-color);
+  position: relative;
+  overflow: hidden;
+}
+
+.skills-list span::after {
+  content: attr(data-text);
+  font-weight: bold;
+  font-size: 11px;
+  color: #000;
+  position: absolute;
+  bottom: -100%;
+  background-color: #00b5e7;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  /* padding: 10px; */
+  transition: 0.5s;
+  z-index: 1;
+  border-radius: 10px;
+  opacity: 0.7;
+}
+
+.skills-list span:hover::after {
+  bottom: 0;
+}
+
+.skills-list span img {
+  max-width: 80%;
+  max-height: 80%;
 }
 
 /* ----- PROJECTS BOX ----- */
@@ -433,9 +477,10 @@ h3 {
   gap: 10px;
   color: var(--color-white);
   margin-block: 5px;
+  font-size: 20px;
 }
 .contact-info p > i {
-  font-size: 18px;
+  font-size: 20px;
 }
 .contact-info::after {
   background: var(--color-white);
@@ -445,6 +490,7 @@ h3 {
 .contact-info:hover.contact-info i {
   color: #777;
   z-index: 2;
+  font-size: 20px;
 }
 
 /* ----- CONTACT FORM ----- */
@@ -522,6 +568,9 @@ footer {
 .footer-social-icons {
   display: flex;
   gap: 30px;
+}
+.footer-social-icons a{
+  color: #000;
 }
 .bottom-footer {
   font-size: 14px;
